src/test/ui/chalkify/generic_impls.stderr
error[E0277]: the trait bound `(std::option::Option<T>, f32): Foo` is not satisfied
  --> $DIR/generic_impls.rs:12:5
   |
LL |     gimme::<(Option<T>, f32)>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `(std::option::Option<T>, f32)`
   |
   = help: the following implementations were found:
             <(T, u32) as Foo>
note: required by `gimme`
  --> $DIR/generic_impls.rs:7:1
   |
LL | fn gimme<F: Foo>() { }
   | ^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `(i32, f32): Foo` is not satisfied
  --> $DIR/generic_impls.rs:17:5
   |
LL |     gimme::<(i32, f32)>();
   |     ^^^^^^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `(i32, f32)`
   |
   = help: the following implementations were found:
             <(T, u32) as Foo>
note: required by `gimme`
  --> $DIR/generic_impls.rs:7:1
   |
LL | fn gimme<F: Foo>() { }
   | ^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
